2008-05-10  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1961475 ]: Hang on read-char-no-hang
	* stream.d (listen_char_buffered): when the next byte is '\n' and
	ChannelStream_ignore_next_LF is true, discard it and retry

2008-05-10  Sam Steingold  <sds@gnu.org>

	* clos-genfun4.lisp (no-next-method): signal
	SYS::SIMPLE-PROGRAM-ERROR instead of PROGRAM-ERROR because only
	the former accepts :FORMAT-CONTROL & :FORMAT-ARGUMENTS

2008-05-10  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in: when testing for
	XauGetAuthByAddr, must #include <X11/Xauth.h> for g++

2008-05-09  Sam Steingold  <sds@gnu.org>

	* describe.lisp (clisp-data-file): put the error message through i18n

2008-05-09  Sam Steingold  <sds@gnu.org>

	* condition.lisp (coerce-to-condition): use ERROR instead of
	SIGNAL to report TYPE-ERROR so that COERCE-TO-CONDITION never
	returns NIL (http://article.gmane.org/gmane.lisp.clisp.general/12208)

2008-05-09  Sam Steingold  <sds@gnu.org>

	* trace.lisp (trace, untrace): turn comments into doc strings

2008-05-08  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/configure.in: check size of pid_t
	* modules/syscalls/calls.c (GETTER, SETTER): move up in file
	(pid_to_I, I_to_pid): define based on SIZEOF_PID_T
	(GETSID, SETPGRP, SETPGID, KILL): use the above
	(GETTER1): add
	(GETSID): use it
	(SETPGID): replace with POSIX::%SETPGID
	(GETPGID): add
	* modules/syscalls/posix.lisp (GETPGID): add DEFSETF

2008-05-07  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.45 (2008-05-15)

2008-05-07  Sam Steingold  <sds@gnu.org>

	* m4/ffcall.m4 (CL_FFCALL): suggest passing --host=... to the
	FFCALL configure if $ac_cv_build != $ac_cv_host

2008-05-07  Sam Steingold  <sds@gnu.org>

	* configure: accept --cbc to mean Configure/Build/Check and
	--build to mean the build host (the usual autoconf meaning)
	* makemake.in: rely on configure for cross-compilation too
	(EXTRAOBJ) [CROSS]: add gllib/malloc

2008-05-07  Sam Steingold  <sds@gnu.org>
